syntax = "proto3";

import "entities/accounts.proto";
import "responses/common.proto";

message GetAllAccountsResponse {
  repeated Account accounts = 1;
}

message GetPollingAccountsResponse {
  repeated Account data = 1;
  PollingMetaData meta = 2;
}

message GetPollingKeysResponse {
  repeated AccountKey data = 1;
  PollingMetaData meta = 2;
}

message GetSingleAccountResponse {
  Account account = 1;
}
